# secure-aggregation

./: .gitignore  README.md
client/: README.md  client.py  client_methods.cpp  client_methods.pyx  enc_model.proto  enc_model_pb2.py  setup.py
common/: c_api.cpp  utils.h
custom/: berkeley_encrypt.py  custom_aggregator.py  (+2 more)
server/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  modelaggregator.edl
server/enclave/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecalls.cpp  enc.c  enc.cpp  modelaggregator.conf  modelaggregator_args.h  modelaggregator_t.c  modelaggregator_t.h  private.pem  public.pem  synch.cpp  synch.h
server/host/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  aggregation_test.py  cmake_install.cmake  enclave.h  host.c  host.cpp  host.h  host_old.cpp  modelaggregator_host  modelaggregator_u.c  modelaggregator_u.h  server_methods.cpp  server_methods.pyx  setup.py
server/host/UNKNOWN.egg-info/: SOURCES.txt
server/host/server_methods.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/server/: CMakeCache.txt  Makefile  cmake_install.cmake  modelaggregator.edl
server/server/enclave/: Makefile  cmake_install.cmake  ecalls.cpp  modelaggregator_t.c  modelaggregator_t.h  private.pem  public.pem
server/server/host/: CMakeLists.txt  cmake_install.cmake  host.h  modelaggregator_u.h  server_methods.cpp  setup.py
server/tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Test  cmake_install.cmake  host_test.cpp  tests.cpp
(+90 files in other folders)
